--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "^7.1.2",
     "autosize": "^4.0.0",
     "babel-runtime": "^6.23.0",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "braintree": "^2.2.0",
@@ -40,6 +41,7 @@
     "create-react-class": "^15.6.0",
     "css-annotation": "^0.6.2",
     "deep-diff": "^0.3.8",
+    "deep-equal": "^1.0.1",
     "dnd-core": "^2.4.0",
     "escape-string-regexp": "^1.0.5",
     "faker": "^4.1.0",
@@ -117,6 +119,7 @@
     "velocity-react": "^1.3.3"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.0",
     "babel-jest": "^21.2.0",
     "babel-plugin-lodash": "^3.2.11",
