--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react-measure": "^2.0.0",
     "react-nouislider": "^2.0.0",
     "react-onclickoutside": "^6.4.0",
+    "react-rater": "^0.4.7",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-select": "^1.0.0-rc.5",
