--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ npm-debug.log
 pids
 results
 allure-results
+buyer.js
 
 client/plugins.js
 client/plugins.css
@@ -28,19 +29,15 @@ client/plugins.styl
 client/plugins.scss
 server/plugins.js
 
-custom/client/*
 !custom/client/.gitkeep
 
-custom/server/*
 !custom/server/.gitkeep
 
-public/custom/*
 !public/custom/.gitkeep
 
 private/custom/*
 !private/custom/.gitkeep
 
-imports/plugins/custom/*
 !imports/plugins/custom/.gitkeep
 
 .reaction/config.json
