--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "deep-diff": "^0.3.8",
     "deep-equal": "^1.0.1",
     "dnd-core": "^2.4.0",
+    "dotenv": "^4.0.0",
     "escape-string-regexp": "^1.0.5",
     "faker": "^4.1.0",
     "fibers": "^2.0.0",
+    "firebase": "^4.7.0",
     "flatten-obj": "^3.1.0",
     "font-awesome": "^4.7.0",
     "handlebars": "^4.0.10",
