--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-taco-table": "^0.5.1",
     "react-tether": "^0.5.7",
     "react-textarea-autosize": "^5.0.7",
+    "recharts": "^1.0.0-beta.6",
     "recompose": "^0.24.0",
     "shallowequal": "^1.0.2",
     "shippo": "^1.3.0",
