--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-dropzone": "^3.13.3",
     "react-helmet": "^5.1.3",
     "react-measure": "^2.0.0",
+    "react-modal": "^3.1.8",
     "react-nouislider": "^2.0.0",
     "react-onclickoutside": "^6.4.0",
     "react-rater": "^0.4.7",
